[package]
name = "wowmine"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
execute = "0.2.9"
scraper = "0.12.0"
futures = "0.3.17"
reqwest = "0.11.7"
tokio = { version = "1", features = ["full"] }
select = "0.5.0"